--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 { font-size: 100%; font-weight: 400; }
 
-img[alt=drawing] { width: 800px; }
+/*img[alt=drawing] { width: 800px; } */
 
 a         { color: #2a7ae2; text-decoration: none; }
 a:hover   { color: #000; text-decoration: underline; }
